--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.19",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
