--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "17.0.38",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.19",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.7",
