--- a/package.json
+++ b/package.json
@@ -2,14 +2,27 @@
   "name": "pj-next",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "nodemon --exec ts-node server/server.ts",
+    "dev": "concurrently \"next dev\" \"npm run server\""
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.1",
+    "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mysql": "^2.18.1",
     "next": "12.0.7",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
@@ -17,8 +30,12 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.178",
+    "@types/mysql": "^2.15.20",
     "@types/node": "17.0.8",
+    "@types/passport": "^1.0.7",
     "@types/react": "17.0.38",
     "@types/react-slick": "^0.23.8",
     "@types/styled-components": "^5.1.19",
@@ -32,7 +49,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "4.5.4"
-  }
+  },
+  "proxy": "http://localhost:6000"
 }
