--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
@@ -25,19 +26,25 @@
     "passport-local": "^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.2",
+    "redux-saga": "^1.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.178",
     "@types/mysql": "^2.15.20",
     "@types/node": "17.0.8",
     "@types/passport": "^1.0.7",
     "@types/react": "17.0.38",
+    "@types/react-redux": "^7.1.22",
     "@types/react-slick": "^0.23.8",
+    "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.19",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "^8.6.0",
