--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mysql": "^2.18.1",
     "next": "12.0.7",
+    "next-redux-wrapper": "^7.0.5",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -36,11 +37,15 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/mysql": "^2.15.20",
-    "@types/node": "17.0.8",
+    "@types/node": "^17.0.8",
     "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "17.0.38",
     "@types/react-redux": "^7.1.22",
     "@types/react-slick": "^0.23.8",
