--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dev": "concurrently \"next dev\" \"npm run server\""
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^32.0.0",
+    "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@toast-ui/react-editor": "^3.1.3",
     "axios": "^0.25.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -37,6 +40,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/ckeditor": "^4.9.10",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
