--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "next": "12.0.7",
     "next-redux-wrapper": "^7.0.5",
