--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@toast-ui/react-editor": "^3.1.3",
     "axios": "^0.25.0",
+    "babel-eslint": "^10.1.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
