--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
       "version": "detect"
     }
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
