--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "parser": "@babel/eslint-parser"
   },
   "dependencies": {
+    "@babel/core": "^7.17.5",
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@toast-ui/react-editor": "^3.1.3",
