--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node server.ts",
     "build": "tsc src && next build",
-    "start": "nodemon --exec ts-node server.ts",
+    "start": "next start",
     "lint": "next lint"
   },
   "eslintConfig": {
