--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "pj-next",
   "private": true,
+  "engines": {
+    "node": "v16.2.0",
+    "npm": "6.14.13"
+  },
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node server.ts",
     "build": "tsc && next build",
@@ -70,6 +75,5 @@
     "prettier": "^2.5.1",
     "ts-node": "^10.4.0",
     "typescript": "4.5.4"
-  },
-  "proxy": "http://localhost:6000"
+  }
 }
