--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,11 +15,12 @@
       "version": "detect"
     }
   },
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2018,
+    "ecmaVersion": 12,
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks", "prettier"],
