--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es6": true,
     "node": true
   },
-  "parser": "babel-eslint",
+  "parser": "@bable/eslint-parser",
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
@@ -21,7 +21,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 2018,
+    "ecmaVersion": 8,
     "sourceType": "module"
   },
   "plugins": ["react", "react-hooks", "prettier"],
