--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "pj-next",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec ts-node server.ts",
-    "build": "next build",
+    "dev": "next dev",
+    "build": "tsc && next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "eslintConfig": {
+    "parser": "@babel/eslint-parser"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
@@ -15,6 +18,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "cookie": "^0.4.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -41,6 +45,7 @@
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
     "@types/ckeditor": "^4.9.10",
+    "@types/cookie": "^0.4.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
