--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "eslintConfig": {
-    "parser": "@babel/eslint-parser"
-  },
   "dependencies": {
+    "@babel/eslint-parser": "^7.17.0",
     "@ckeditor/ckeditor5-build-classic": "^32.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@toast-ui/react-editor": "^3.1.3",
