--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
+    "serverless-mysql": "^1.5.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
